--- a/index.html
+++ b/index.html
@@ -260,6 +260,16 @@
                     many human remains in the first place, IU employees and Tribal members agree the process of NAGPRA
                     today can never fully right the wrongs of the past. But it can help everyone involved move forward.
                 </p>
+
+            </div>
+            <figure class="xl-image">
+                <img src="images/student-building.jpeg" alt="">
+                <figcaption>
+                    <p class="credit">Courtesy of IU Archives</p>
+                    <p class="caption">Student building</p>
+                </figcaption>
+            </figure>
+            <div class="story">
                 <p class="section-break">•••</p>
                 <p>Wesley Thomas said when he worked at IU in the early 2000s, NAGPRA was well-understood by everyone in
                     the anthropology department, faculty and graduate students, as it was a core concept taught in
@@ -372,6 +382,19 @@
                     different from what they were when I was in graduate school in the ‘80s,” Pyburn said.</p>
                 <p>The problematic past of anthropology is clear from the story of how IU acquired so many human
                     remains.</p>
+
+            </div>
+            <figure class="xl-image">
+                <img src="images/angel-excavation-2.jpg" alt="">
+                <figcaption>
+                    <p class="credit">Courtesy of the Glenn Black Laboratory</p>
+                    <p class="caption">
+                        Angel excavation
+                    </p>
+                </figcaption>
+            </figure>
+            <div class="story">
+
                 <p class="section-break">•••</p>
                 <p>For most of the history of anthropology, Native Americans have been viewed as objects of scientific
                     study rather than people. This worldview was baked into IU’s anthropology department from the start,
@@ -389,6 +412,15 @@
                     archaeology, covering his field expenses and arranging for him to study at the Ohio State Museum.
                     Black and Lilly would become close friends, exchanging lengthy letters about Indiana prehistory for
                     decades and comparing their relationship to that of a father and son.</p>
+                <figure>
+                    <img src="images/black-and-lilly.jpg" alt="">
+                    <p class="credit">Courtesy of </p>
+                    <p class="caption">Black (left) & Lilly</p>
+                </figure>
+                <p>Around the same time, Lilly began a decades-long obsession with the Walam Olum, a set of birch bark
+                    scrolls supposedly found and transcribed by natural scientist Constantine Rafinesque from the
+                    Lenape, or Delaware, language into English in 1833, which most historians now agree was probably
+                    forged.</p>
                 <div class="definition-card wide-right">
                     <p class="word">Walam Olum <i class="fas fa-info-circle"></i></p>
                     <p class="definition">A set of birch-bark scrolls supposedly found by scientist Constantine
@@ -400,10 +432,6 @@
                     <p class="source"><strong>SOURCE:</strong> <a
                             href="https://www.jstor.org/stable/20638640?seq=24">American Literary History</a></p>
                 </div>
-                <p>Around the same time, Lilly began a decades-long obsession with the Walam Olum, a set of birch bark
-                    scrolls supposedly found and transcribed by natural scientist Constantine Rafinesque from the
-                    Lenape, or Delaware, language into English in 1833, which most historians now agree was probably
-                    forged.</p>
                 <p>Lilly sponsored several more anthropologists as part of a plan to prove the document’s validity by
                     assembling a multidisciplinary research team. In the mid-1930s, Lilly provided fellowships to
                     linguistic anthropologist Charles F. Voegelin, archaeologist James B. Griffin, and physical
@@ -440,6 +468,13 @@
                     rather frail reed on which to lean in archaeological work.” But Lilly and his Indiana group
                     continued work on the thesis for 20 years, continuing to come back to the project as they also
                     pursued other research into Indiana’s prehistory.</p>
+
+            </div>
+            <figure class="lg-image">
+                <img src="images/anthro-faculty-2.jpeg" alt="">
+            </figure>
+            <div class="story">
+
                 <p>In 1938, Lilly provided $68,000 (more than $1.4 million today) to help the Indiana Historical Society
                     purchase the Angel Mounds site in Vanderburgh County, and Black began to excavate. Materials from
                     Angel Mounds form the largest portion of IU’s archaeological collection today, comprising more than
@@ -498,6 +533,12 @@
                 <p>Neumann’s career built on the work of scientists like Samuel Morton, a phrenologist who classified
                     humans into five different races and who associated skull size with intelligence and racial
                     superiority, and whose work was used to justify chattel slavery.</p>
+
+                <figure>
+                    <img src="images/neumann.jpeg" alt="">
+                    <p class="credit">Courtesy of IU Archives</p>
+                </figure>
+
                 <p>Partnering with Indiana University was a logical next step for Lilly, who needed an institution to
                     house artifacts and continue to produce research as part of his long-term goal of ensuring a future
                     for anthropology work in Indiana. By mid-1947, Lilly had worked with then-Chancellor Herman B Wells
@@ -600,6 +641,17 @@
                     with NAGPRA, said he was very happy to see IU establish a NAGPRA Office, and has been impressed with
                     the office’s progress in the decade since.</p>
                 <p>“It was much delayed. But when the university finally woke up, they really woke up,” Wilk said.</p>
+
+            </div>
+            <figure class="xl-image">
+                <img src="images/angel-mounds-1.jpeg" alt="">
+                <figcaption>
+                    <p class="credit">Courtesy of IU Archives</p>
+                    <p class="caption">Caption</p>
+                </figcaption>
+            </figure>
+            <div class="story">
+
                 <p class="section-break">•••</p>
                 <p>NAGPRA has received more attention recently after ProPublica published an investigation into public
                     repatriation data in early January, which called out IU in particular for the large size of its
@@ -633,6 +685,19 @@
                     anti-NAGPRA and refuse to work with communities.”</p>
                 <p>Instead, she said the size of collections reflects on the practices of institutions decades and even
                     centuries ago.</p>
+
+                <figure>
+                    <h4>IU reported the fifth-largest collection of Native American remains in the U.S.</h4>
+                    <h5 style="margin-bottom: calc(0.5em + 60px);">Federally funded institutions must report
+                        inventories of Native American remains under
+                        NAGPRA.</h5>
+                    <div class="container"></div>
+                    <div id="beeswarm"></div>
+                    <p class="graphic-footnote" style="text-align: right;margin-top:-38px;"><strong>Source:</strong> <a
+                            href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory" target="_blank">NAGPRA
+                            Inventories</a></p>
+                </figure>
+
                 <p>Jayne-Leigh also noted that NAGPRA stories are often kept personal and private, because they involve
                     personal grief and spiritual ceremonies. NAGPRA coordinators are also careful to avoid disclosing
                     the location of reburial grounds in most cases to deter looters. For these reasons, she explained
@@ -794,7 +859,7 @@
     <script src="js/stripPlot.js"></script>
     <script type="module" src="js/bubbleMap.js"></script>
     <script type="module" src="js/beeSwarm.js"></script>
-    <script type="module" src="js/beeSwarm2.js"></script>
+    <!-- <script type="module" src="js/beeSwarm2.js"></script> -->
     <script src="js/ids.js"></script>
     <script src="js/metadata.js"></script>
 </body>
