--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                 <!-- MAP OF ORIGIN OF REMAINS -->
                 <h3>Where did the remains come from?</h3>
             </div>
-            <figure class="xl-image">
+            <figure class="xl-image show-desktop">
                 <div class="map-legend"></div>
                 <div id="bubble-map"></div>
             </figure>
@@ -686,7 +686,7 @@
                 <p>Instead, she said the size of collections reflects on the practices of institutions decades and even
                     centuries ago.</p>
 
-                <figure>
+                <figure class="show-desktop">
                     <h4>IU reported the fifth-largest collection of Native American remains in the U.S.</h4>
                     <h5 style="margin-bottom: calc(0.5em + 60px);">Federally funded institutions must report
                         inventories of Native American remains under
@@ -825,7 +825,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-col">
+            <div class="footer-col marketplace">
 
                 <h4>Marketplace</h4>
                 <ul class="links">
