--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
                     <div class="text-spacer"></div>
                     <div class="sidebar-note">
                         <div class="mug">
-                            <img src="images/mug-wesley-thomas.jpeg" alt="">
-                            <p><strong>Wesley Thomas</strong> <br><em>Interim Director of Graduate Studies & Research,
+                            <img src="https://s3.amazonaws.com/snwceomedia/ids/234bae0a-bbe3-433b-97db-9b2741864370.original.jpeg"
+                                alt="">
+                            <p><strong>Wesley Thomas</strong> <br><em>Professor Emeritus,
                                     Navajo Technical University</em></p>
                         </div>
                     </div>
@@ -257,7 +258,8 @@
                     <div class="text-spacer"></div>
                     <div class="sidebar-note">
                         <div class="mug">
-                            <img src="images/mug-richard-wilk.jpeg" alt="">
+                            <img src="https://s3.amazonaws.com/snwceomedia/ids/2e68ac07-5cc6-465b-9845-8a9d156808bd.original.jpeg"
+                                alt="">
                             <p><strong>Richard Wilk</strong> <br><em>Distinguished Professor Emeritus</em></p>
                         </div>
                     </div>
@@ -299,7 +301,8 @@
                     <div class="text-spacer"></div>
                     <div class="sidebar-note">
                         <div class="mug">
-                            <img src="images/mug-anne-pyburn.jpeg" alt="">
+                            <img src="https://s3.amazonaws.com/snwceomedia/ids/03ba1b81-7e0b-48ff-8eb0-5da018e573ed.original.jpeg"
+                                alt="">
                             <p><strong>Anne Pyburn</strong> <br><em>Provost Professor, Anthropology</em></p>
                         </div>
                     </div>
@@ -568,7 +571,8 @@
                     <div class="text-spacer"></div>
                     <div class="sidebar-note">
                         <div class="mug">
-                            <img src="images/mug-jayne-leigh.jpeg" alt="">
+                            <img src="https://s3.amazonaws.com/snwceomedia/ids/d78c7b08-63ff-4c78-8725-51e1404a80ed.original.jpeg"
+                                alt="">
                             <p><strong>Jayne-Leigh Thomas</strong> <br><em>IU NAGPRA Director</em></p>
                         </div>
                     </div>
@@ -842,10 +846,10 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
-    <script src="js/population.js"></script>
-    <script src="js/albersusa.js"></script>
+    <!-- <script src="js/population.js"></script> -->
+    <!-- <script src="js/albersusa.js"></script> -->
     <script src="js/colorLegend.js"></script>
-    <script src="js/stripPlot.js"></script>
+    <!-- <script src="js/stripPlot.js"></script> -->
     <script type="module" src="js/bubbleMap.js"></script>
     <script type="module" src="js/beeSwarm.js"></script>
     <!-- <script type="module" src="js/beeSwarm2.js"></script> -->
