add alt text, ads

--- a/index.html
+++ b/index.html
@@ -109,19 +109,23 @@
                 <figure class="imagegrid">
                     <img class="topper-img-1"
                         src="https://s3.amazonaws.com/snwceomedia/ids/0ecb2433-22a1-44a8-ade5-2688f529429c.original.jpeg"
-                        alt="">
+                        alt="a black and white photo of a grassy field with trees">
                     <img class="topper-img-2"
                         src="https://s3.amazonaws.com/snwceomedia/ids/17713b21-79c4-4712-9873-5d04eecd6324.original.jpeg"
-                        alt="">
+                        alt="a black and white photo of a limestone building with a tall turret">
                     <img class="topper-img-3"
                         src="https://s3.amazonaws.com/snwceomedia/ids/3e6b7684-dcac-4cf3-ba1c-e0647c3de949.original.jpeg"
-                        alt="">
+                        alt="a black and white photo of four men wearing suits sitting in a room filled with books with maps on the wall">
                 </figure>
                 <div>
-                    <h1>Thousands of Native American remains, a legacy of offensive research and the effort to move
-                        forward
+                    <h1>After 20 years avoiding repatriation and 10 dedicated to&nbsp;it,&nbsp;IU&nbsp;still has
+                        thousands of
+                        Indigenous human remains
                     </h1>
-                    <h2>How IU works to repatriate Indigenous human remains under a 1990 federal law</h2>
+                    <h2>A recent Senate probe seeks details on IU’s compliance with a
+                        1990&nbsp;law&nbsp;mandating&nbsp;the return of Tribal remains and
+                        cultural&nbsp;items
+                    </h2>
                 </div>
             </div>
             <!-- <figure class="sm-image">
@@ -164,7 +168,7 @@
                     <div class="sidebar-note">
                         <div class="mug">
                             <img src="https://s3.amazonaws.com/snwceomedia/ids/234bae0a-bbe3-433b-97db-9b2741864370.original.jpeg"
-                                alt="">
+                                alt="a headshot of a man wearing an orange shirt, a brown suit jacket, and glasses with dark hair smiling and sitting in an office">
                             <p><strong>Wesley Thomas</strong> <br><em>Professor Emeritus,
                                     Navajo Technical University</em></p>
                         </div>
@@ -210,6 +214,21 @@
                     repatriation and continue research. Despite faculty advocacy as early as the late 1990s, IU didn’t
                     provide funding for NAGPRA work until 2013 — three years after the federal law was updated to close
                     the loophole.</p>
+
+            </div>
+            <!-- AD BLOCK -->
+            <div class="ad-block">
+                <p class="ad-caption">Advertisement</p>
+                <div class="ad-code">
+                    <div id='div-gpt-ad-1512489859064-2' align="center">
+                        <script>
+                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-2'); }); 
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
+
                 <p>In that year, IU hired Jayne-Leigh Thomas — not related to Wesley Thomas — who still serves as the
                     director of the IU NAGPRA Office. In the 10 years since, Jayne-Leigh has greatly improved the
                     university’s reputation for NAGPRA compliance, according to interviews with faculty. Jayne-Leigh has
@@ -225,7 +244,7 @@
             </div>
             <figure class="xl-image">
                 <img src="https://s3.amazonaws.com/snwceomedia/ids/17713b21-79c4-4712-9873-5d04eecd6324.original.jpeg"
-                    alt="">
+                    alt="a black and white photo of a limestone building with a tall turret">
                 <figcaption>
                     <p class="credit">Courtesy of IU Archives</p>
                     <p class="caption">A photo of the Student Building taken in 1939. IU stored most of its collection
@@ -246,6 +265,21 @@
                     Wesley, who is also the founding director of the IU First Nations Educational & Cultural Center.</p>
                 <p>He said the culture of the department contributed to his decision to leave IU and return to the
                     Navajo Nation in 2006, where he is now a professor emeritus at Navajo Technical University.</p>
+
+            </div>
+            <!-- AD BLOCK -->
+            <div class="ad-block">
+                <p class="ad-caption">Advertisement</p>
+                <div class="ad-code">
+                    <div id='div-gpt-ad-1512489859064-3' align="center">
+                        <script>
+                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-3'); }); 
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
+
                 <p>“I felt extremely awkward, uncomfortable, unpleasant, that I shouldn't be there,” Wesley said. “I
                     think it was probably one of the reasons why I decided to leave. I knew it was not a place where
                     Indigenous people should be there as faculty members, because the university was not ready for it.”
@@ -259,8 +293,9 @@
                     <div class="sidebar-note">
                         <div class="mug">
                             <img src="https://s3.amazonaws.com/snwceomedia/ids/2e68ac07-5cc6-465b-9845-8a9d156808bd.original.jpeg"
-                                alt="">
-                            <p><strong>Richard Wilk</strong> <br><em>Distinguished Professor Emeritus</em></p>
+                                alt="a headshot of a man with a white shirt, clear glasses, brown hair and a white goattee smiling in front of a dark background">
+                            <p><strong>Richard Wilk</strong> <br><em>Professor Emeritus, IU Department of
+                                    Anthropology</em></p>
                         </div>
                     </div>
                 </div>
@@ -302,7 +337,7 @@
                     <div class="sidebar-note">
                         <div class="mug">
                             <img src="https://s3.amazonaws.com/snwceomedia/ids/03ba1b81-7e0b-48ff-8eb0-5da018e573ed.original.jpeg"
-                                alt="">
+                                alt="a headshot of a woman wearing a red sweater with a brown ponytail smiling and standing outside">
                             <p><strong>Anne Pyburn</strong> <br><em>Provost Professor, Anthropology</em></p>
                         </div>
                     </div>
@@ -355,6 +390,21 @@
                     either.</p>
                 <p>Aman, now a professor emeritus, told the IDS he does not remember Wilk reaching out since it was more
                     than 20 years ago.</p>
+
+            </div>
+            <!-- AD BLOCK -->
+            <div class="ad-block">
+                <p class="ad-caption">Advertisement</p>
+                <div class="ad-code">
+                    <div id='div-gpt-ad-1512489859064-4' align="center">
+                        <script>
+                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-4'); }); 
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
+
                 <p>“I think rather than active opposition, what we got was lack of movement,” Wilk said. “There's a
                     difference between actively opposing something and just not dealing with it. And I think that's what
                     we were doing for a long time, was just not dealing with it.”</p>
@@ -380,7 +430,7 @@
 
             <figure class="xl-image">
                 <img src="https://s3.amazonaws.com/snwceomedia/ids/7d509d22-f23e-4e08-8cb9-a6025fcad14c.original.jpg"
-                    alt="">
+                    alt="a black and white image of about a dozen men standing in several squared off areas of dirt with very short walls and digging in the ground ">
                 <figcaption>
                     <p class="credit">Courtesy of the Glenn Black A. Laboratory of Archaeology</p>
                     <p class="caption">
@@ -409,7 +459,7 @@
                     friends, according to Lilly’s biography.</p>
                 <figure>
                     <img src="https://s3.amazonaws.com/snwceomedia/ids/1953be64-8f04-4f5f-85a8-7d696e1b5ee7.original.jpg"
-                        alt="">
+                        alt="a black and white image of two men standing together. the man on the left is wearing baggy slacks and a patterned suit jacket. he has white hair and glasses. the man on the right is wearing a suit with a vest and a fedora. both men are looking at the camera and almost smiling">
                     <p class="credit">Courtesy of the Glenn Black A. Laboratory of Archaeology</p>
                     <p class="caption">Glenn Black, left, and Eli Lilly stand together around 1959 at Angel Mounds,
                         where Black lived for decades as he continued archaeological work there, funded mostly by Lilly.
@@ -459,7 +509,7 @@
                     superiority, and whose work was used to justify chattel slavery.</p>
                 <figure>
                     <img src="https://s3.amazonaws.com/snwceomedia/ids/c33f5b10-0238-4182-bcf4-1e0b281ff784.original.jpeg"
-                        alt="">
+                        alt="a black and white photo of a middle-aged man in a three-piece suit and tie holding a small piece of bone. he's standing next to a table where a small model of a structure with a thatched roof sits. in the background, several skeletons can be seen hanging on a wall of an office">
                     <p class="credit">Courtesy of IU Archives</p>
                     <p class="caption">Georg Neumann poses with Native American artifacts in February 1950. Neumann, a
                         physical anthropologist, specialized in the study of human skulls. </p>
@@ -479,6 +529,21 @@
                     context, Rafinesque likely had a political motivation to publish the Walam Olum because it claimed
                     the Lenape people migrated from the Old World, and he hoped to generate sympathy for Native people
                     by linking their genetic and cultural heritage to Europeans.</p>
+
+            </div>
+            <!-- AD BLOCK -->
+            <div class="ad-block">
+                <p class="ad-caption">Advertisement</p>
+                <div class="ad-code">
+                    <div id='div-gpt-ad-1512489859064-0' align="center">
+                        <script>
+                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-0'); }); 
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
+
                 <p>On the other hand, the Walam Olum has also been used to provide evidence for the existence of a
                     fabled “race” of “Moundbuilders,” a myth from the early 20th century, said Grimm. The myth claims
                     that the ancient people who built burial mounds had to have been more advanced, and more directly
@@ -495,13 +560,16 @@
             </div>
             <figure class="lg-image">
                 <img src="https://s3.amazonaws.com/snwceomedia/ids/3e6b7684-dcac-4cf3-ba1c-e0647c3de949.original.jpeg"
-                    alt="">
-                <p class="credit">Courtesy of IU Archives</p>
-                <p class="caption">Glenn Black (right), Georg Neumann (second from right) and Charles F. Voegelin (third
-                    from right) pose for a photo in 1947, the year IU founded its Department of Anthropology. Black,
-                    Neumann and Voegelin were the three core members of IU’s anthropology faculty, and were also all
-                    part of Eli Lilly’s “Indiana group,” a group of anthropologists he sponsored to research the
-                    prehistory of Indiana. </p>
+                    alt="a black and white photo of four men wearing suits sitting in a room filled with books with maps on the wall">
+                <figcaption>
+                    <p class="credit">Courtesy of IU Archives</p>
+                    <p class="caption">Glenn Black (right), Georg Neumann (second from right) and Charles F. Voegelin
+                        (third
+                        from right) pose for a photo in 1947, the year IU founded its Department of Anthropology. Black,
+                        Neumann and Voegelin were the three core members of IU’s anthropology faculty, and were also all
+                        part of Eli Lilly’s “Indiana group,” a group of anthropologists he sponsored to research the
+                        prehistory of Indiana. </p>
+                </figcaption>
             </figure>
             <div class="story">
                 <p>In 1938, Lilly provided $68,000 (more than $1.4 million today) to help the Indiana Historical Society
@@ -513,7 +581,7 @@
                     dozens of U.S. states to IU through donations from other museums, universities or private donors,
                     some of the main ways anthropologists acquired research materials through the 20th century.</p>
                 <!-- MAP OF ORIGIN OF REMAINS -->
-                <h3>Where did the remains come from?</h3>
+                <h4>Where did the remains come from?</h4>
             </div>
             <figure class="xl-image show-desktop">
                 <div class="map-legend"></div>
@@ -540,6 +608,21 @@
                     titled “Walam Olum or Red Score: The Migration Legend of the Lenni Lenape or Delaware Indians.” The
                     book received mixed reviews, as anthropologists recognized the impressive scope of the project, but
                     also pointed out the limitations of relying on the Walam Olum as a primary document.</p>
+
+            </div>
+            <!-- AD BLOCK -->
+            <div class="ad-block">
+                <p class="ad-caption">Advertisement</p>
+                <div class="ad-code">
+                    <div id='div-gpt-ad-1512489859064-1' align="center">
+                        <script>
+                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-1'); }); 
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
+
                 <p>Black continued to excavate Angel Mounds, where he lived for most of his life, until his sudden death
                     in 1964. At that time, Lilly funded the Glenn A. Black Laboratory of Archaeology at IU, both to
                     honor his friend and to provide a place to store and facilitate the research of the millions of
@@ -572,7 +655,7 @@
                     <div class="sidebar-note">
                         <div class="mug">
                             <img src="https://s3.amazonaws.com/snwceomedia/ids/d78c7b08-63ff-4c78-8725-51e1404a80ed.original.jpeg"
-                                alt="">
+                                alt="a headshot of a woman with dark curly hair smiling and standing in front of a Christmas tree">
                             <p><strong>Jayne-Leigh Thomas</strong> <br><em>IU NAGPRA Director</em></p>
                         </div>
                     </div>
@@ -582,6 +665,18 @@
                 <p>There was no dedicated NAGPRA employee or office at IU until August 2013. That’s when Jayne-Leigh was
                     hired, and shortly afterward, she and April Sievert, then-director of the Glenn Black Lab, met with
                     Wilson in-person, finally following up on the original letter from decades earlier.</p>
+
+                <figure>
+                    <h4>IU spent about $440,000 on its NAGPRA Office this year</h4>
+                    <h5>The office now employs six full-time staff members</h5>
+                    <iframe title="" aria-label="Interactive line chart" id="datawrapper-chart-nhbDC"
+                        src="https://datawrapper.dwcdn.net/nhbDC/3/" scrolling="no" frameborder="0"
+                        style="width: 0; min-width: 100% !important; border: none;" height="400"
+                        data-external="1"></iframe>
+                    <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
+                    </script>
+                </figure>
+
                 <p>When she first started, Jayne-Leigh said she also sent letters in the mail, but didn’t hear back from
                     most Tribal representatives, who often deal with constant communication from many institutions. So
                     in 2014, she and April Sievert, then-director of the Glenn Black Lab, flew to Oklahoma and visited
@@ -633,7 +728,7 @@
             </div>
             <figure class="xl-image">
                 <img src="https://s3.amazonaws.com/snwceomedia/ids/0ecb2433-22a1-44a8-ade5-2688f529429c.original.jpeg"
-                    alt="">
+                    alt="a black and white photo of a grassy field with trees">
                 <figcaption>
                     <p class="credit">Courtesy of IU Archives</p>
                     <p class="caption">A photo of Angel Mounds archaeological site in 1948. In 2021, IU NAGPRA completed
