add walam olum photos

--- a/index.html
+++ b/index.html
@@ -609,19 +609,23 @@
                     book received mixed reviews, as anthropologists recognized the impressive scope of the project, but
                     also pointed out the limitations of relying on the Walam Olum as a primary document.</p>
 
-            </div>
-            <!-- AD BLOCK -->
-            <div class="ad-block">
-                <p class="ad-caption">Advertisement</p>
-                <div class="ad-code">
-                    <div id='div-gpt-ad-1512489859064-1' align="center">
-                        <script>
-                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-1'); }); 
-                        </script>
-                    </div>
+                <!-- side by side photos -->
+                <div class="side-by-side" style="margin-bottom:0;">
+                    <figure>
+                        <img src="https://s3.amazonaws.com/snwceomedia/ids/f9bc1ab4-7fe5-43eb-9af6-06f08308efe2.original.jpeg"
+                            alt="The spine of an old book. It is black with gold lettering that reads, walam olum, the migration legend of the lenni lenape or delaware indians, followed by about a dozen golden pictograph drawings, and then the words indiana historical society">
+                    </figure>
+                    <figure>
+                        <img src="https://s3.amazonaws.com/snwceomedia/ids/28e016c1-ea26-4e05-b5d2-a9ac20e4da7f.original.jpeg"
+                            alt="A yellowish page in a book which reads, 'Walam olum or red score, the migration legend of the lenni lenape or delaware indians. a new translation interpreted by linguistic, historical, archaeological, ethnological, and physical anthropological studies, indianapolis historical society, 1954'">
+                    </figure>
                 </div>
-            </div>
-            <div class="story">
+                <figcaption style="margin-bottom:var(--lg);">
+                    <p class="credit">Courtesy of the Glenn A. Black Laboratory of Archaeology</p>
+                    <p class="caption">The spine and first page of “Walam Olum or Red Score: The Migration Legend of the
+                        Lenni Lenape or Delaware Indians," the final product of Eli Lilly's Walam Olum research project.
+                    </p>
+                </figcaption>
 
                 <p>Black continued to excavate Angel Mounds, where he lived for most of his life, until his sudden death
                     in 1964. At that time, Lilly funded the Glenn A. Black Laboratory of Archaeology at IU, both to
@@ -708,6 +712,21 @@
                 <p>“I had put a map of Indiana up on the board and I said, ‘Do you want me to start with Southern
                     Indiana, Northern Indiana, along the Illinois-Ohio borders… I didn't want to make the decision,”
                     Thomas said. “And they said, ‘What's the largest collection you have?’ So that's what we did.”</p>
+
+            </div>
+            <!-- AD BLOCK -->
+            <div class="ad-block">
+                <p class="ad-caption">Advertisement</p>
+                <div class="ad-code">
+                    <div id='div-gpt-ad-1512489859064-1' align="center">
+                        <script>
+                            googletag.cmd.push(function () { googletag.display('div-gpt-ad-1512489859064-1'); }); 
+                        </script>
+                    </div>
+                </div>
+            </div>
+            <div class="story">
+
                 <p>In spring 2021, the day after the spring equinox, Wilson and other Tribal representatives returned to
                     Indiana for the repatriation ceremony of the human remains from Angel Mounds, when more than 700
                     individuals were reburied.</p>
