updates for mobile

--- a/index.html
+++ b/index.html
@@ -690,9 +690,11 @@
                     one of the main ways anthropologists acquired the remains of people for research through the 20th
                     century.</p>
                 <!-- MAP OF ORIGIN OF REMAINS -->
-                <h4 style="margin-top:2.0em;">IU has reported Native American remains originating from at least 10
+                <h4 class="show-desktop" style="margin-top:2.0em;">IU has reported Native American remains originating
+                    from at least 10
                     states</h4>
-                <h5 style="margin-bottom: -20px;">Through the 20th century, anthropologists, amateur archaeologists and
+                <h5 class="show-desktop" style="margin-bottom: -20px;">Through the 20th century, anthropologists,
+                    amateur archaeologists and
                     collectors would donate Native American remains to faculty members at universities for study. This
                     resulted in IU having human remains that originate thousands of miles away from Bloomington.
                 </h5>
@@ -702,7 +704,8 @@
                 <div id="bubble-map"></div>
             </figure>
             <div class="story">
-                <p class="graphic-footnote"><strong>Note:</strong> Data only includes human remains that IU has not yet
+                <p class="graphic-footnote show-desktop"><strong>Note:</strong> Data only includes human remains that IU
+                    has not yet
                     repatriated. County totals are subsets of state totals. Not
                     all
                     data points have
@@ -711,7 +714,7 @@
                     At
                     least
                     66 individuals reported by IU had no location data, and aren't shown in this map. </p>
-                <p class="graphic-footnote"><strong>Source:</strong> <a
+                <p class="graphic-footnote show-desktop"><strong>Source:</strong> <a
                         href="https://grantsdev.cr.nps.gov/NagpraPublic/Home/Inventory" target="_blank">NAGPRA
                         Inventories</a></p>
                 <p>Partnering with Indiana University was a logical next step for Lilly, who needed an institution to
