--- a/index.html
+++ b/index.html
@@ -153,9 +153,14 @@
             </div>
             <div class="story">
                 <p class="caption topper-caption">
-                    <strong>TOP PHOTOS</strong> Left: The Angel Mounds burial site in Vanderburgh County is seen in
+                    <strong>TOP PHOTOS</strong> <span class="show-desktop-inline">Left:</span><span
+                        class="show-mobile-inline">Top:</span> The Angel Mounds burial site in Vanderburgh County is
+                    seen in
                     1948. Middle: The Student
-                    Building is seen in 1939. Right: The founding members of the IU Department of Anthropology pose in
+                    Building is seen in 1939. <span class="show-desktop-inline">Right:</span><span
+                        class="show-mobile-inline">Bottom</span> The founding members of the IU Department of
+                    Anthropology pose
+                    in
                     1947,
                     the first year of the department. <span
                         style="font-style:italic;font-size:.8em;opacity:.8;text-transform:uppercase;">Courtesy of IU
@@ -354,6 +359,9 @@
                     according
                     to multiple faculty interviews, a small group pushed for better compliance efforts starting in the
                     late ‘90s.</p>
+                <p class="show-mobile">In 2000, Richard Wilk became the department chair of the anthropology department.
+                    Wilk said he was
+                    immediately concerned about IU’s potential noncompliance with NAGPRA.</p>
             </div>
             <div class="sidebar-note-wrapper">
                 <div class="sidebar-note-inner">
@@ -370,7 +378,8 @@
                 </div>
             </div>
             <div class="story">
-                <p>In 2000, Richard Wilk became the department chair of the anthropology department. Wilk said he was
+                <p class="show-desktop">In 2000, Richard Wilk became the department chair of the anthropology
+                    department. Wilk said he was
                     immediately concerned about IU’s potential noncompliance with NAGPRA.</p>
 
                 <div class="definition-card wide-left">
@@ -395,7 +404,10 @@
                     according to Wilk and other faculty. Hired as an associate professor and the curator of the
                     collection, she had no past experience with repatriation work, and IU provided no NAGPRA training or
                     overtime pay to help her complete the inventory.</p>
-
+                <p class="show-mobile">Anne Pyburn, IU Provost professor of Anthropology, who has worked at
+                    IU-Bloomington since the ‘90s,
+                    said asking a professor to add NAGPRA work to their job was unreasonable, and that Cook was not
+                    equipped with adequate resources.</p>
             </div>
             <div class="sidebar-note-wrapper">
                 <div class="sidebar-note-inner">
@@ -411,7 +423,8 @@
                 </div>
             </div>
             <div class="story">
-                <p>Anne Pyburn, IU Provost professor of Anthropology, who has worked at IU-Bloomington since the ‘90s,
+                <p class="show-desktop">Anne Pyburn, IU Provost professor of Anthropology, who has worked at
+                    IU-Bloomington since the ‘90s,
                     said asking a professor to add NAGPRA work to their job was unreasonable, and that Cook was not
                     equipped with adequate resources.</p>
                 <p>“That's a different skill set,” Pyburn said. “It's not just, ‘Here's another full time job,’ it's
@@ -750,6 +763,9 @@
                     be working there.</p>
                 <p>The methods used to acquire Native American remains for study and the nature of that resulting
                     research has long been offensive to most Native Americans.</p>
+                <p class="show-mobile">Carrie V. Wilson, NAGPRA Director at the Quapaw Nation, said she can’t understand
+                    why past scientists
+                    felt the need to excavate human remains and cultural items.</p>
             </div>
             <div class="sidebar-note-wrapper">
                 <div class="sidebar-note-inner">
@@ -767,7 +783,8 @@
                 </div>
             </div>
             <div class="story">
-                <p>Carrie V. Wilson, NAGPRA Director at the Quapaw Nation, said she can’t understand why past scientists
+                <p class="show-desktop">Carrie V. Wilson, NAGPRA Director at the Quapaw Nation, said she can’t
+                    understand why past scientists
                     felt the need to excavate human remains and cultural items.</p>
 
                 <p>“As far as trying to understand the logic behind it and all that kind of stuff, I can't even begin to
@@ -781,7 +798,11 @@
                     until decades later.</p>
                 <p>Wilson was and still is the only dedicated NAGPRA worker at the Quapaw Nation. She said she tried to
                     get in touch with the Glenn Black Lab a couple times over the years but personnel kept changing.</p>
-
+                <p class="show-mobile">Then in 2013, IU began a series of changes that would finally enable good-faith
+                    repatriation work to
+                    begin. April Sievert became the director of the Glenn Black Lab, and began to address NAGPRA
+                    compliance. A few months later, IU hired Jayne-Leigh Thomas as the first director of its new NAGPRA
+                    Office.</p>
             </div>
             <div class="sidebar-note-wrapper">
                 <div class="sidebar-note-inner">
@@ -797,7 +818,8 @@
                 </div>
             </div>
             <div class="story">
-                <p>Then in 2013, IU began a series of changes that would finally enable good-faith repatriation work to
+                <p class="show-desktop">Then in 2013, IU began a series of changes that would finally enable good-faith
+                    repatriation work to
                     begin. April Sievert became the director of the Glenn Black Lab, and began to address NAGPRA
                     compliance. A few months later, IU hired Jayne-Leigh Thomas as the first director of its new NAGPRA
                     Office.</p>
